--- a/style.css
+++ b/style.css
@@ -1,19 +1,62 @@
 body{
     display: flex;
     background-color: azure;
-    justify-content: center;
     padding-top: 50px;
+    justify-content: center;
 }
 
-.content{
-    display: flex;
-    width: 1024px;
-    height: 768px;
-    border: 2px solid black;
+button{
+    width: 100%;
+    padding: 20px;
+    margin: 0px;
+    border: 1px solid black
+}
+
+button:hover{
+    background-color: antiquewhite;
 }
 
 .mainBody{
     display: flex;
-    justify-content: space-around;
-    
+    height: 350px;
+    width: 250px;
+    border: 1px solid black;
+    flex-direction: column;
+}
+
+.mainScreen{
+    display: flex;
+    height: 75px;
+    background-color: lightslategray;
+    border: 1px solid black;
+    color: white;
+}
+
+.buttonContent{
+    display: flex;
+    flex-direction: column;
+}
+
+.firstRow{
+    display: flex;
+}
+
+.secondRow{
+    display: flex;
+}
+
+.thirdRow{
+    display: flex;
+}
+
+.fourthRow{
+    display: flex;
+}
+
+.fithRow{
+    display: flex;
+}
+
+#ZeroFullSize{
+    display: flex;
 }
