--- a/style.css
+++ b/style.css
@@ -1,15 +1,16 @@
 body{
     display: flex;
     background-color: azure;
-    padding-top: 50px;
-    justify-content: center;
+    padding-top: 40px;
+    flex-direction: column;
+    align-items: center;
 }
 
 button{
     width: 100%;
-    padding: 20px;
-    margin: 0px;
-    border: 1px solid black
+    padding: 19px;
+    border: 1px solid black;
+    font-size: 16px;
 }
 
 button:hover{
@@ -30,11 +31,13 @@ button:hover{
     background-color: lightslategray;
     border: 1px solid black;
     color: white;
+    font-size: 16px;
 }
 
 .buttonContent{
     display: flex;
     flex-direction: column;
+    height: 350px;
 }
 
 .firstRow{
