--- a/style.css
+++ b/style.css
@@ -31,8 +31,11 @@ button:hover{
     background-color: lightslategray;
     border: 1px solid black;
     color: white;
-    font-size: 16px;
+    font-size: 18px;
+    justify-content: flex-end;
+    padding-right: 15px;
 }
+
 
 .buttonContent{
     display: flex;
